--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.1",
+    "safe-browse-url-lookup": "^0.1.1",
     "ssl-checker": "^2.0.10",
     "whois": "^2.14.2",
     "whois-json": "^2.0.4"
